# heeketime-schema-python

./: .gitignore  README.md  pyproject.toml
heektime_schema/: lecture_pb2.py  lectures_service_pb2.py  lectures_service_pb2_grpc.py  period_pb2.py  semester_pb2.py
heektime_schema/services/: lectures_pb2.py  lectures_pb2_grpc.py
