[tool.poetry]
name = "heektime-schema"
version = "0.2.1"
description = ""
authors = ["jangjunha <jangjunha113@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
protobuf = "^3.14.0"
grpcio = "^1.35.0"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.35.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
