[tool.poetry]
name = "heektime-schema"
version = "0.3.3"
description = ""
authors = ["jangjunha <jangjunha113@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
protobuf = "^4.21"
grpcio = "^1.51"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.51"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
